// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<slider> demo: > render [basic] correctly 1`] = `
<div class="sd-slider sd:w-50">
  <div class="sd-slider-track">
    <div class="sd-slider-bar" style="left: 0%; right: 50%;"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style="left: 50%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-valuetext="50" class="sd-slider-btn"></div>
    <!---->
  </div>
  <!--v-if-->
</div>
`;

exports[`<slider> demo: > render [disabled] correctly 1`] = `
<div class="sd-slider sd:w-50">
  <div class="sd-slider-track sd-slider-track-disabled">
    <div class="sd-slider-bar" style="left: 0%; right: 50%;"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style="left: 50%;" tabindex="0" role="slider" aria-disabled="true" aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-valuetext="50" class="sd-slider-btn"></div>
    <!---->
  </div>
  <!--v-if-->
</div>
`;

exports[`<slider> demo: > render [input] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-slider sd:w-75">
      <div class="sd-slider-track">
        <div class="sd-slider-bar" style="left: 0%; right: 90%;"></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style="left: 10%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" aria-valuetext="10" class="sd-slider-btn"></div>
        <!---->
      </div>
      <div class="sd-slider-input">
        <!--v-if--><span class="sd-input-wrapper sd-input-number sd-input-number-mode-embed sd-input-number-size-medium"><!----><input class="sd-input sd-input-size-medium" type="text" role="spinbutton" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" value="10"><!----><!----></span>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-slider sd:w-95">
      <div class="sd-slider-track">
        <div class="sd-slider-bar" style="left: 10%; right: 80%;"></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style="left: 10%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" aria-valuetext="10" class="sd-slider-btn"></div>
        <!---->
        <div style="left: 20%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="sd-slider-btn"></div>
        <!---->
      </div>
      <div class="sd-slider-input"><span class="sd-input-wrapper sd-input-number sd-input-number-mode-embed sd-input-number-size-medium"><!----><input class="sd-input sd-input-size-medium" type="text" role="spinbutton" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" value="10"><!----><!----></span>
        <div class="sd-slider-input-hyphens"></div><span class="sd-input-wrapper sd-input-number sd-input-number-mode-embed sd-input-number-size-medium"><!----><input class="sd-input sd-input-size-medium" type="text" role="spinbutton" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" value="20"><!----><!----></span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<slider> demo: > render [marks] correctly 1`] = `
<div class="sd-slider sd-slider-with-marks sd:w-75">
  <div class="sd-slider-track">
    <div class="sd-slider-bar" style="left: 0%; right: 66.67%;"></div>
    <!--v-if-->
    <div class="sd-slider-dots">
      <div class="sd-slider-dot-wrapper" style="left: 0%;">
        <div class="sd-slider-dot sd-slider-dot-active"></div>
      </div>
      <div class="sd-slider-dot-wrapper" style="left: 33.33%;">
        <div class="sd-slider-dot sd-slider-dot-active"></div>
      </div>
      <div class="sd-slider-dot-wrapper" style="left: 66.67%;">
        <div class="sd-slider-dot"></div>
      </div>
      <div class="sd-slider-dot-wrapper" style="left: 100%;">
        <div class="sd-slider-dot"></div>
      </div>
    </div>
    <div class="sd-slider-marks">
      <div aria-hidden="true" class="sd-slider-mark" style="left: 0%;">0km</div>
      <div aria-hidden="true" class="sd-slider-mark" style="left: 33.33%;">5km</div>
      <div aria-hidden="true" class="sd-slider-mark" style="left: 66.67%;">10km</div>
      <div aria-hidden="true" class="sd-slider-mark" style="left: 100%;">15km</div>
    </div>
    <!--v-if-->
    <div style="left: 33.33%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="15" aria-valuemin="0" aria-valuenow="5" aria-valuetext="5" class="sd-slider-btn"></div>
    <!---->
  </div>
  <!--v-if-->
</div>
`;

exports[`<slider> demo: > render [range] correctly 1`] = `
<div class="sd-slider sd:w-75">
  <div class="sd-slider-track">
    <div class="sd-slider-bar" style="left: 5%; right: 90%;"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style="left: 5%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="5" aria-valuetext="5" class="sd-slider-btn"></div>
    <!---->
    <div style="left: 10%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" aria-valuetext="10" class="sd-slider-btn"></div>
    <!---->
  </div>
  <!--v-if-->
</div>
`;

exports[`<slider> demo: > render [step] correctly 1`] = `
<div class="sd-space sd-space-vertical" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <form class="sd-form sd-form-layout-inline sd-form-size-medium">
      <div class="sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-inline">
        <div class="sd-form-item-label-col"><label class="sd-form-item-label">
            <!--v-if-->Step
            <!--v-if-->
            <!--v-if-->
          </label></div>
        <div class="sd-form-item-wrapper-col" id="step">
          <div class="sd-form-item-content-wrapper">
            <div class="sd-form-item-content sd-form-item-content-flex"><span class="sd-input-wrapper sd-input-number sd-input-number-mode-embed sd-input-number-size-medium sd:w-25"><!----><input class="sd-input sd-input-size-medium" type="text" role="spinbutton" aria-valuemax="Infinity" aria-valuemin="-Infinity" aria-valuenow="5" value="5"><!----><span class="sd-input-suffix"><!----><!----><div class="sd-input-number-step"><button class="sd-input-number-step-button" type="button" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-up" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 30.557 24.043 15 8.487 30.557"></path></svg></button><button class="sd-input-number-step-button" type="button" tabindex="-1"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></button></div><!----></span></span></div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
      <div class="sd-row-align-start sd-row-justify-start sd-form-item sd-form-item-layout-inline">
        <div class="sd-form-item-label-col"><label class="sd-form-item-label">
            <!--v-if-->Show steps
            <!--v-if-->
            <!--v-if-->
          </label></div>
        <div class="sd-form-item-wrapper-col" id="showTicks">
          <div class="sd-form-item-content-wrapper">
            <div class="sd-form-item-content sd-form-item-content-flex"><button type="button" role="switch" aria-checked="true" class="sd-switch sd-switch-type-circle sd-switch-checked"><span class="sd-switch-handle"><span class="sd-switch-handle-icon"></span></span><!--  prettier-ignore  -->
                <!--v-if-->
              </button></div>
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
      </div>
    </form>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-slider sd:w-75">
      <div class="sd-slider-track">
        <div class="sd-slider-bar" style="left: 0%; right: 80%;"></div>
        <div class="sd-slider-ticks">
          <div class="sd-slider-tick sd-slider-tick-active" style="left: 5%;"></div>
          <div class="sd-slider-tick sd-slider-tick-active" style="left: 10%;"></div>
          <div class="sd-slider-tick sd-slider-tick-active" style="left: 15%;"></div>
          <div class="sd-slider-tick sd-slider-tick-active" style="left: 20%;"></div>
          <div class="sd-slider-tick" style="left: 25%;"></div>
          <div class="sd-slider-tick" style="left: 30%;"></div>
          <div class="sd-slider-tick" style="left: 35%;"></div>
          <div class="sd-slider-tick" style="left: 40%;"></div>
          <div class="sd-slider-tick" style="left: 45%;"></div>
          <div class="sd-slider-tick" style="left: 50%;"></div>
          <div class="sd-slider-tick" style="left: 55%;"></div>
          <div class="sd-slider-tick" style="left: 60%;"></div>
          <div class="sd-slider-tick" style="left: 65%;"></div>
          <div class="sd-slider-tick" style="left: 70%;"></div>
          <div class="sd-slider-tick" style="left: 75%;"></div>
          <div class="sd-slider-tick" style="left: 80%;"></div>
          <div class="sd-slider-tick" style="left: 85%;"></div>
          <div class="sd-slider-tick" style="left: 90%;"></div>
          <div class="sd-slider-tick" style="left: 95%;"></div>
        </div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style="left: 20%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="20" aria-valuetext="20" class="sd-slider-btn"></div>
        <!---->
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`<slider> demo: > render [tooltip] correctly 1`] = `
<div class="sd-slider sd:w-50">
  <div class="sd-slider-track">
    <div class="sd-slider-bar" style="left: 0%; right: 100%;"></div>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <div style="left: 0%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="50" aria-valuemin="0" aria-valuenow="0" aria-valuetext="0%" class="sd-slider-btn"></div>
    <!---->
  </div>
  <!--v-if-->
</div>
`;

exports[`<slider> demo: > render [vertical] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-start" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-slider sd-slider-vertical">
      <div class="sd-slider-track sd-slider-track-vertical">
        <div class="sd-slider-bar" style="bottom: 0%; top: 50%;"></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div style="bottom: 50%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" aria-valuetext="50" class="sd-slider-btn"></div>
        <!---->
      </div>
      <!--v-if-->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-slider sd-slider-vertical sd-slider-with-marks sd:w-75">
      <div class="sd-slider-track sd-slider-track-vertical">
        <div class="sd-slider-bar" style="bottom: 0%; top: 66.67%;"></div>
        <!--v-if-->
        <div class="sd-slider-dots">
          <div class="sd-slider-dot-wrapper" style="bottom: 33.33%;">
            <div class="sd-slider-dot sd-slider-dot-active"></div>
          </div>
          <div class="sd-slider-dot-wrapper" style="bottom: 66.67%;">
            <div class="sd-slider-dot"></div>
          </div>
        </div>
        <div class="sd-slider-marks">
          <div aria-hidden="true" class="sd-slider-mark" style="bottom: 33.33%;">5km</div>
          <div aria-hidden="true" class="sd-slider-mark" style="bottom: 66.67%;">10km</div>
        </div>
        <!--v-if-->
        <div style="bottom: 33.33%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="15" aria-valuemin="0" aria-valuenow="5" aria-valuetext="5" class="sd-slider-btn"></div>
        <!---->
      </div>
      <!--v-if-->
    </div>
  </div>
</div>
`;
